[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/mainmenu/mdl_settingsmenu_background.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/mainmenu/mat_settingsmenu_bg.tres" type="Material" id=2]
[ext_resource path="res://scenes/mainmenu/scripts/settingsmenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/common/tex_color_black.png" type="Texture" id=4]
[ext_resource path="res://scenes/mainmenu/tex_menu_box.png" type="Texture" id=5]
[ext_resource path="res://scenes/mainmenu/tex_settingsmenu_tab.svg" type="Texture" id=6]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="NinePatchRect" parent="menu"]
anchor_right = 1.0
anchor_bottom = 0.1
margin_top = -4.0
rect_clip_content = true
texture = ExtResource( 5 )
patch_margin_top = 4
patch_margin_bottom = 4

[node name="tab1" type="NinePatchRect" parent="menu/top"]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -0.400002
margin_bottom = -2.0
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="menu/top/tab1"]
anchor_top = 0.469
anchor_right = 1.0
anchor_bottom = 0.469
margin_left = 16.0
margin_top = -7.0
margin_right = -15.6
bbcode_enabled = true
bbcode_text = "[color=#000000]Settings Menu"
text = "Settings Menu"
fit_content_height = true

[node name="tab2" type="NinePatchRect" parent="menu/top"]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 1.0
margin_left = -0.400002
margin_bottom = -2.0
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="menu/top/tab2"]
anchor_top = 0.469
anchor_right = 1.0
anchor_bottom = 0.469
margin_left = 16.0
margin_top = -7.0
margin_right = -15.6
bbcode_enabled = true
bbcode_text = "[color=#000000]Settings Menu"
text = "Settings Menu"
fit_content_height = true

[node name="tab3" type="NinePatchRect" parent="menu/top"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -0.400002
margin_bottom = -2.0
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="menu/top/tab3"]
anchor_top = 0.469
anchor_right = 1.0
anchor_bottom = 0.469
margin_left = 16.0
margin_top = -7.0
margin_right = -15.6
bbcode_enabled = true
bbcode_text = "[color=#000000]Settings Menu"
text = "Settings Menu"
fit_content_height = true

[node name="mid" type="Control" parent="menu"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menu/mid"]
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Button" parent="menu/mid/VBoxContainer"]
margin_right = 614.0
margin_bottom = 95.0
size_flags_vertical = 3
text = "Controls"

[node name="audio" type="Button" parent="menu/mid/VBoxContainer"]
margin_top = 99.0
margin_right = 614.0
margin_bottom = 194.0
size_flags_vertical = 3
text = "Audio"

[node name="Button3" type="Button" parent="menu/mid/VBoxContainer"]
margin_top = 198.0
margin_right = 614.0
margin_bottom = 294.0
size_flags_vertical = 3

[node name="bottom" type="NinePatchRect" parent="menu"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
texture = ExtResource( 5 )
patch_margin_top = 4
patch_margin_bottom = 4

[node name="Button" type="Button" parent="menu/bottom"]
anchor_left = 0.01
anchor_top = 0.1
anchor_right = 0.2
anchor_bottom = 0.9
text = "Back"

[node name="background3d" type="Spatial" parent="."]

[node name="mdl_settingsmenu_background" parent="background3d" instance=ExtResource( 1 )]

[node name="Cube" parent="background3d/mdl_settingsmenu_background" index="0"]
material/0 = ExtResource( 2 )

[node name="Camera" type="Camera" parent="background3d"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="overlay_black" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[editable path="background3d/mdl_settingsmenu_background"]
